<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Maintenance Man</string>

    <!-- Add Fleet Roster -->
    <string name="title_add_fleet_roster">Add Vehicle</string>
    <string name="title_dialog_add">New Vehicle</string>
    <string name="error_required">This Field is Required</string>
    <string name="error_required_missing">Missing Required Field: Make, Model, or Year</string>
    <string name="error_set_vehicle_type">Please Select Vehicle</string>
    <string name="hint_spinner">Select Type</string>
    <string name="hint_spinner_cat">Select Category</string>
    <string name="hint_year">Year</string>
    <string name="hint_make">Make</string>
    <string name="hint_model">Model</string>
    <string name="field_business">Business Vehicle</string>

    <string-array name="vehicle_type">
        <item>Automobile</item>
        <item>Motorcycle</item>
        <item>Utility</item>
        <item>Marine</item>
        <item>Lawn and Garden</item>
        <item>Trailer</item>
    </string-array>

    <!-- Add Field -->
    <string name="title_add_field">Add Field</string>
    <string name="error_field_label">Enter Label</string>
    <string name="error_field_val">Enter Value</string>
    <string name="hint_event_spinner">Select Vehicle</string>
    <string name="label_field_name">Label</string>
    <string name="label_field_value">Value</string>
    <string-array name="field_type">
        <item>General</item>
        <item>Engine</item>
        <item>Power Train</item>
        <item>Other</item>
    </string-array>

    <!-- Add Vehicle Event -->
    <string name="title_add_vehicle_event">Add Event</string>
    <string name="add_vehicle_event">Add Maintenance Task</string>
    <string name="error_set_vehicle">Please Vehicle</string>
    <string name="error_field_event">Please Add Event</string>
    <string name="toast_update">History Updated</string>
    <string name="spec_date">Date</string>
    <string name="spec_odo">Odometer</string>
    <string name="spec_event">Event</string>
    <string name="field_date">Date</string>
    <string name="field_odo">Odometer</string>
    <string name="field_event">Event</string>
    <string name="field_price">Price</string>
    <string name="field_comment">Comment</string>

    <!-- Add Travel Event -->
    <string name="title_travel">Trips</string>
    <string name="field_start">Odometer Start</string>
    <string name="field_end">Odometer End</string>
    <string name="field_dest">Destination</string>
    <string name="field_purpose">Reason for Trip</string>
    <string name="error_dest_val">Enter Destination</string>
    <string name="error_start_val">Enter Trip Start</string>

    <!-- Charts -->
    <string name="header_chart">Maintenance Expenses</string>

    <!-- Contact Me -->
    <string name="title_contact">Contact Me</string>
    <string name="action">Send Using...</string>
    <string name="to">kd8bny@gmail.com</string>
    <string name="subject">MM Feedback</string>
    <string name="body">Hello Daryl,\n</string>

    <!-- Dialogs -->
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>

    <!-- Donate -->
    <string name="title_donate">Donate</string>
    <string name="message_donate">Thank you for your interest in my app :) Any donation would be appreciated</string>
    <string name="amount_sm">Buy me a Beer</string>

    <!-- Edit -->
    <string name="title_edit">Edit Vehicle</string>

    <!--fab-->
    <string name="menu_add_vehicle">Add Vehicle</string>
    <string name="menu_add_event">Add Event</string>
    <string name="menu_add_business">Log Trip</string>
    <string name="menu_add_mileage">Add Mileage</string>

    <!-- History -->
    <string name="title_history">Maintenance</string>
    <string name="error_no_history">No Vehicle History</string>
    <string name="label_date">Date: </string>
    <string name="label_odo">On: </string>
    <string name="label_search">Search</string>
    <string name="menu_delete_event">Delete</string>
    <string name="menu_edit_event">Edit</string>
    <string name="menu_hist_sort">Sort By Date</string>
    <string name="menu_hist_search">Search Events</string>
    <string name="menu_hist_export">Export to CSV</string>
    <string name="share">Share your CSV</string>

    <!-- Info -->
    <string name="title_info">About</string>
    <string name="header_general">General</string>
    <string name="header_engine">Engine</string>
    <string name="header_power_train">Power Train</string>
    <string name="header_other">Other</string>
    <string name="header_current">Per Annum</string>
    <string name="header_business_chart">Business Expenses</string>

    <!-- Intro -->
    <string name="title_intro">intro</string>
    <string name="subtitle_add">Vehicle Log</string>
    <string name="subtitle_travel">Travel Log</string>
    <string name="subtitle_specs">View Details</string>
    <string name="subtitle_mileage">Fuel Mileage</string>
    <string name="summary_mm">Thank you for downloading Maintenance Man :)</string>
    <string name="summary_add">Add multiple vehicles, motorcycles, boats, and trailers\n
        \nTrack maintenance such as oil changes, tune ups, and tire rotations</string>
    <string name="summary_dbx">Register with Dropbox to support full cloud synchronization</string>
    <string name="summary_specs">Store your vehicle\'s specifications for easy retrieval\n
        \nItems can be filter numbers, tag number, or even tire sizes</string>
    <string name="summary_travel">Going on a long trip? Log your odometer and locations here.\n
        \nThis way you know which trip will rack up your cars\' mileage.</string>
    <string name="summary_mileage">Every time you fill up your fuel tank, go ahead and enter it.\n
        That way you\'ll get stats like average mileage and cost.</string>

    <!-- Main -->
    <string name="oh_noes">"Oh Noes!!!"</string>
    <string name="empty_db">"Click to Add Vehicle"</string>
    <string name="empty_db_dbx">"Set up cloud sync"</string>
    <string name="no_data">"No Data"</string>
    <string name="last_event">"Last Event:"</string>
    <string name="drawer_sec_options">Options</string>
    <string name="drawer_view_community">View Community</string>
    <string name="menu_sort">Sort</string>
    <string name="toast_update_ui">Data Updated</string>
    <string name="toast_sort_year">Sort by Year</string>
    <string name="toast_sort_model">Sort by Model</string>
    <string name="toast_sort_type">Sort by Type</string>

    <!--Mileage-->
    <string name="title_mileage">Mileage</string>
    <string name="title_mileage_add">Add Fill Up</string>
    <string name="result_mileage">Your consumption: </string>
    <string name="field_trip">Distance Since Last Fill</string>
    <string name="field_fill_vol">Amount Filled</string>
    <string name="field_mileage_price">Price</string>
    <string name="hint_no_mileage">Enter on your next fill up</string>
    <string name="hint_no_cost">No maintenance completed</string>
    <string name="hint_info_cost">total expenses</string>
    <string name="hint_info_mileage">mpg</string>
    <string name="hint_info_mileage_metric">mpg</string>
    <string name="hint_info_mileage_cost">avg fuel cost</string>
    <string name="menu_toggle_mileage">Switch to Mileage</string>
    <string name="menu_toggle_maintenance">Switch to Maintenance</string>

    <!-- Preferences -->
    <string name="title_settings">Settings</string>
    <string name="title_settings_dbx">Dropbox Settings</string>

    <string name="pref_title_cat_units">Units</string>
    <string name="pref_summary_units">Select Distance Units</string>
    <string name="pref_unit_dist_default">mi</string>

    <string name="pref_cloud_default">dropbox</string>
    <string name="pref_title_cat_cloud">Cloud Backup</string>
    <string name="pref_title_cat_cloud_default">Default Cloud Back Up</string>
    <string name="pref_title_cloud_init">Set Up</string>
    <string name="pref_title_cat_man">Manual Sync</string>
    <string name="pref_title_cloud_restore">Restore Data</string>
    <string name="pref_title_cloud_backup">Backup Data</string>
    <string name="pref_toast_dropbox_restore">Restoring</string>
    <string name="pref_toast_dropbox_backup">Backing Up</string>

    <string name="pref_title_cat_dropbox">Dropbox</string>
    <string name="pref_key_dropbox">dropbox</string>

    <string name="pref_title_cat_gdrive">Google Drive</string>
    <string name="pref_key_gdrive">gdrive</string>

    <string name="pref_title_cat_about">About</string>
    <string name="pref_key_about">about</string>

    <!-- sync -->
    <string name="title_sync">Please wait</string>
    <string name="hint_sync">while I sync your data</string>

    <!-- Toolbar -->
    <string name="menu_add">Add</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_del">Delete</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_save">Save</string>
    <string name="menu_settings">Settings</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_activity_billing">activity_billing</string>

    <!-- Units -->
    <string name="unit_time"> hrs</string>
    <string name="unit_mileage_us">mpg</string>
    <string name="unit_mileage_metric">Km/L</string>
    <string name="unit_mileage_time_metric">hr/L</string>
    <string name="unit_mileage_time_us">hr/gal</string>
    <string name="unit_dist_us">mi</string>
    <string name="unit_dist_metric">Km</string>

    <!-- View Pager Activity -->
    <string name="title_view_pager">My Vehicle</string>

    <!-- Whats New -->
    <string name="title_whats_new">Whats New!!</string>
    <string name="button_whats_new">Read</string>
    <string name="whatsNew">
        V3.3.2 13Sept2016\n\n

        - Added Fuel Mileage Tracking\n
        - Removed info graph temporarily it\'ll return bigger and better\n
        - Added a floating action menu for every vehicle screen\n
        - US and Metric units make a return\n
        - Better formatting of numbers
        - Tons and tons of code cleaning\n\n

        V3.2.5 5June2016\n\n

        Fix that nasty dropbox bug. No longer will you FC close on start.\n
        Fix wrong layout for Kitkat and below. Caused FC.\n
        Sorry to anyone who experienced these\n

        Contact Me Added in Nav Drawer\n
        Please use for any concerns with the app\n\n
    </string>
</resources>
