<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_save"
        android:title="@string/menu_save"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_ok"
        android:paddingLeft="@dimen/header_horizontal_margin"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/menu_cancel"
        android:title="@string/menu_cancel"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_not_ok"
        android:paddingLeft="@dimen/header_horizontal_margin"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/menu_del"
          android:title="@string/menu_del"
          android:orderInCategory="100"
          android:icon="@drawable/ic_action_trash"
          android:paddingLeft="@dimen/header_horizontal_margin"
          app:showAsAction="never"/>
</menu>